# Laboratorio_Programmazione

./: CMakeLists.txt  ConcreteObserver.h  File.cpp  File.h  FileLoader.cpp  FileLoader.h  MainWindow.cpp  MainWindow.h  Observer.h  README.md  Subject.h  main.cpp
Files/: SampleText.txt
test/: CMakeLists.txt  TestFile.cpp  TestFileLoader.cpp  TestObserver.cpp
