add_subdirectory(./lib/googletest)
set(gtest_SOURCE_DIR, ./lib/googletst)
include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
set(SOURCE_FILES runAllTests.cpp TestFile.cpp TestFileLoader.cpp)
add_executable(runAllTests.cpp ${SOURCE_FILES})
target_link_libraries(runAllTests.cpp gtest gtest_main core)